--- a/deep/index.html
+++ b/deep/index.html
@@ -14,8 +14,8 @@
         <header class="header">
           <div class="container">
             <nav class="nav">
-              <a class="nav__logo" href="#">
-                <img src="img/logo.svg" width="300" height="39" alt="DeepInLove.Date">
+              <a class="nav__link" href="#">
+                <img class="nav__logo" src="img/logo.svg" alt="DeepInLove.Date">
               </a>
               <button class="nav__toggle  nav__toggle--inactive">Open Menu</button>
               <ul class="nav__list">
@@ -23,8 +23,9 @@
                 <li><a class="nav__item" href="#">Girls</a></li>
                 <li><a class="nav__item  nav__item--white" href="#">Boys</a></li>
                 <li><a class="nav__item  nav__item--white" href="#">Blog</a></li>
+                <li><a class="button  button--small  button--red  " href="#">Sign Up</a></li>
               </ul>
-              <a class="button  button--small  button--red" href="#">Sign Up</a>
+              <a class="button  button--small  button--red  nav__signup" href="#">Sign Up</a>
             </nav>
           </div>
         </header>
@@ -78,16 +79,28 @@
         </div>
       </div>
     </div>
+    <section class="find">
+      <div class="container">
+        <h2 class="find__name">Find your love with us</h2>
+        <p class="find__text">Finding your love has become as easy as never before with our fine-tuned matching algorithms and 100% real and cross-checked profiles of people eager to find own second half. We have collected so many users that searching process has become really useful and informative. You can start finding your best match already in minutes after your profile is started. Fall in love for real, and we’ll do the rest!</p>
+        <div class="find__video">
+          <button class="find__play" type="button">Play</button>
+        </div>
+        <div class="find__branch"></div>
+      </div>
+    </section>
   </main>
   <footer class="footer">
     <div class="container">
       <nav class="nav">
-        <a class="nav__logo" href="#">DeepInLove.Date</a>
-        <ul class="nav__list">
-          <li><a class="nav__item" href="#">About Us</a></li>
-          <li><a class="nav__item" href="#">Girls</a></li>
-          <li><a class="nav__item" href="#">Boys</a></li>
-          <li><a class="nav__item" href="#">Blog</a></li>
+        <a class="nav__logo" href="#">
+          <img src="img/logo-footer.svg" width="267" height="35" alt="DeepInLove.Date">
+        </a>
+        <ul class="nav__list  nav__list--footer">
+          <li><a class="nav__item  nav__item--footer" href="#">About Us</a></li>
+          <li><a class="nav__item  nav__item--footer" href="#">Girls</a></li>
+          <li><a class="nav__item  nav__item--footer" href="#">Boys</a></li>
+          <li><a class="nav__item  nav__item--footer" href="#">Blog</a></li>
         </ul>
         <!-- <a class="button  button--small  button--red" href="#">Sign Up</a> -->
       </nav>
