--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 				</ul>
 				<h3>Общее</h3>
 				<ul>
-					<li>Photoshop, Adobe Assets</li>
+					<li>Adobe Photoshop, XD</li>
 					<li>Jira</li>
-					<li>Базовые знания <b>MySql</b>, <b>PHP</b> и <b>WordPress</b></li>
-					<li>Использование системы контроля версий (Git)</li>
-					<li>Оптимизация скорости</li>
+					<li>Базовые знания MySql, PHP</li>
+					<li>Git</li>
+					<li>Оптимизация сайтов</li>
 					<li>Терминал</li>
 				</ul>
 			</div>
