--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -229,7 +229,7 @@
             <li>Fast Registration</li>
             <li>Live quotes</li>
             <li>Multiplatforms </li>
-            <li>No strategy Limitations</li>
+            <li>No strategy<br>Limitations</li>
           </ul>
           <a href="client/demo.html">Create account</a>
         </div>
@@ -269,12 +269,12 @@
   <section class="license">
     <div class="container">
       <h1 class="license__name">Regulated and Licensed</h1>
-      <ul class="license__list">
+      <!-- <ul class="license__list">
         <li><b>CySEC</b> – CySEC authorised and regulated under licence number 300/16</li>
         <li><b>MiFID</b> – As a regulated investment firm within the EU, we follow the Markets in Financial Instruments Directive (MiFID), which aims to improve market transparency and protect investors.</li>
         <li><b>I.C.F</b> – We are a member of the Investor Compensation Fund, which is an additional protection for Covered Clients who can make a claim if the company ever stops fulfilling its obligations.</li>
       </ul>
-        <hr>
+        <hr> -->
       <div class="license__flex">
         <div class="license__box  license__box--1">
           <b>Low Spreads &<br>Competitive Pricing</b>
@@ -590,7 +590,7 @@
             <img class="footer__logo" src="img/logo-w.svg" alt="Forex24 Global">
           </li>
           <li>
-            <!-- <a class="footer__callme" href="tel:+442080891644">Call us</a> -->
+            <a class="footer__callme" href="tel:+442080891644">Call us</a>
           </li>
           <li class="footer__social">
             <a class="footer__link  footer__link--fb" href="https://www.facebook.com/forex24com/" target="_blank"></a>
