some another updates

--- a/forexglobal/index.html
+++ b/forexglobal/index.html
@@ -50,8 +50,8 @@
         <nav class="nav  nav--closed">
           <ul class="nav__list">
             <li>
-              <a class="nav__link" onclick="about()">About</a>
-              <div class="nav__wrapper  nav__wrapper--closed">
+              <a class="nav__link" href="#">About</a>
+              <div class="nav__wrapper">
                 <ul class="nav__sub">
                   <li><a href="about-us/licenses-and-regulations.html">Licenses and Regulations</a></li>
                   <li><a href="about-us/security-of-funds.html">Security of Funds</a></li>
@@ -63,7 +63,7 @@
               </div>
             </li>
             <li>
-              <a class="nav__link" onclick="trading()">Trading</a>
+              <a class="nav__link" href="#">Trading</a>
               <div class="nav__wrapper  nav__wrapper--closed">
                 <ul class="nav__sub">
                   <li><a href="trading/account-types.html">Account Types</a></li>
@@ -77,7 +77,7 @@
               </div>
             </li>
             <li>
-              <a class="nav__link" onclick="resources()">Resources</a>
+              <a class="nav__link" href="#">Resources</a>
               <div class="nav__wrapper  nav__wrapper--closed">
                 <ul class="nav__sub">
                   <li><a href="resources/glossary.html">Glossary</a></li>
@@ -87,7 +87,7 @@
             </li>
             <li><a href="https://partners.forex24.com/" target="_blank">Partners</a></li>
             <li>
-              <a class="nav__link" onclick="contact()">Contact Us</a>
+              <a class="nav__link" href="#">Contact Us</a>
               <div class="nav__wrapper  nav__wrapper--closed">
                 <ul class="nav__sub">
                   <li><a href="contact-us.html">Contact Us</a></li>
