--- a/study-summer/thankyou.html
+++ b/study-summer/thankyou.html
@@ -2,10 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Летние групповые поездки в Великобританию со STUDY.UA</title>
-  <meta name="description" content="Групповая поездка в Великобританию от STUDY.UA — проведите каникулы весело и с пользой для английского языка.">
-  <meta name="keywords" content="Групповая поездка,групповая поездка за границу, групповая поездка для школьников, поездки для школьников в Великобританию, летние каникулы в Великобритании, каникулы за рубежом, поездки в Великобританию">
-  <meta property="og:image" content="https://revcheg.github.io/study-summer/dist/img/og-image.jpg">
+  <title>Спасибо за Вашу заявку!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="preload" href="fonts/GothamPro.woff" as="font" type="font/woff" crossorigin="anonymous">
@@ -18,14 +15,12 @@
   <link rel="preload" href="fonts/GothamPro-Black.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.min.css">
   <!-- Favicon -->
-  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="manifest" href="summer.webmanifest">
-  <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
+  <link rel="icon" type="image/svg+xml" sizes="any" href="img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="48x48" href="img/favicon/favicon-48x48.png">
   <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="summer.webmanifest">
   <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#dd0505">
-  <meta name="msapplication-config" content="browserconfig.xml">
-  <meta name="msapplication-TileColor" content="#dd0505">
   <meta name="theme-color" content="#6a7efc">
   <!-- Google Tag Manager -->
   <script>
@@ -56,7 +51,7 @@
         <a class="thankyou__link" href="tel:097 000 03 20">+38 097 000-03-20</a>
       </p>
     </div>
-    <a class="thankyou__button" href="https://study.ua/summer_uk">Назад</a>
+    <!-- <a class="thankyou__button" href="https://study.ua/summer_uk">Назад</a> -->
   </main>
 </body>
 </html>
