--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 							<img src="assets/images/forexglobal.png" alt=""/>
 							<figcaption>
 								<h2>Forex24Global</h2>
-								<p><a href="forexglobal/dist/" class="work-a" target="_blank">Подивитись</a></p>
+								<p><a href="forexglobal/dist/index.html" class="work-a" target="_blank">Подивитись</a></p>
 							</figcaption>
 						</figure>
 					</div>
